--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "tests"
   ],
   "dependencies": {
-    "mobile-angular-ui": "~1.1.0-beta.29"
+    "mobile-angular-ui": "~1.1.0-beta.29",
+    "angular-markdown-directive": "https://github.com/FronterAS/angular-markdown-directive.git#0.3.1"
   }
 }
